fix(label): icon size, close button better alignment with pfv4

--- a/elements/pfe-label/pfe-label.scss
+++ b/elements/pfe-label/pfe-label.scss
@@ -7,6 +7,7 @@
   color: var(--pf-c-label--Color, var(--pf-global--Color--100, #151515));
   background-color: var(--pf-c-label--BackgroundColor, var(--pf-global--palette--black-150, #f5f5f5));
   border-radius: var(--pf-c-label--BorderRadius, 30em);
+  --pf-global--icon--FontSize--sm: 14px;
 }
 
 :host([compact]) {
@@ -14,6 +15,7 @@
   --pf-c-label--PaddingRight: var(--pf-c-label--m-compact--PaddingRight, var(--pf-global--spacer--sm, 0.5rem));
   --pf-c-label--PaddingBottom: var(--pf-c-label--m-compact--PaddingBottom, 0);
   --pf-c-label--PaddingLeft: var(--pf-c-label--m-compact--PaddingLeft, var(--pf-global--spacer--sm, 0.5rem));
+  --pf-global--icon--FontSize--sm: 12px;
 }
 
 #container {
@@ -146,12 +148,8 @@ pfe-button {
     var(--pf-global--spacer--xs, 0.25rem));
   --pf-c-button--PaddingLeft: var(--pf-c-label__c-button--PaddingLeft,
     var(--pf-global--spacer--sm, 0.5rem));
-  margin-top: var(--pf-c-label__c-button--MarginTop,
-    calc(var(--pf-global--spacer--form-element) * -1));
-  margin-right: var(--pf-c-label__c-button--MarginRight,
-    calc(var(--pf-global--spacer--form-element) * -1));
-  margin-bottom: var(--pf-c-label__c-button--MarginBottom,
-    calc(var(--pf-global--spacer--form-element) * -1));
-  margin-left: var(--pf-c-label__c-button--MarginLeft,
-    var(--pf-global--spacer--xs, 0.25rem));
+    margin-top: var(--pf-c-label__c-button--MarginTop, -0.5rem);
+    margin-right: var(--pf-c-label__c-button--MarginRight, -0.5rem);
+    margin-bottom: var(--pf-c-label__c-button--MarginBottom, -0.5rem);
+    margin-left: var(--pf-c-label__c-button--MarginLeft, 0.25rem);
 }
